# High-Performance-Computing

Language Feature/: CMakeLists.txt  main.cpp
Project 1 Remastered/: CMakeLists.txt  ReadMe.md  ReadMe.sh  main.cpp
Project 1 Remastered/solve_X11_mac/: CMakeLists.txt  a.out  main.cpp
Project 1-Barnsley Farn/: ReadMe.md
Project 1-Barnsley Farn/some_library/: CMakeLists.txt  ReadMe.sh  demo_lib.cpp  demo_lib.h
Project 1-Barnsley Farn/your_project/: CMakeLists.txt  main.cpp
